--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ MONGODB_URL="mongodb+srv://aj3157182:mcsfNfzZp2ESc1fK@cluster0.uuay3x4.mongodb.n
 CLOUD_NAME=dqvskyeaf
 API_KEY=252827926192259
 API_SECRET=zMvjLVBuijm1xe4COl8OJ693cmc
+NEXT_PUBLIC_ADMIN_PASSKEY=123456
