--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@sentry/nextjs": "^8.26.0",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-table": "^8.20.1",
     "axios": "^1.7.3",
@@ -41,6 +42,7 @@
     "react-phone-number-input": "^3.4.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "twilio": "^5.2.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
