--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,8 @@
       }
     ],
     "paths": {
-      // "@/*": ["./*"]
-      "@/*": ["src/*"]
+       "@/*": ["./*"]
+    //  "@/*": ["src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "lib/cloudinary.js"],
