--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "lib": ["dom", "dom.iterable", "esnext"],
+    "baseUrl":"./",
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -18,8 +19,9 @@
       }
     ],
     "paths": {
-       "@/*": ["./*"]
+       "@/*": ["./*"],
     //  "@/*": ["src/*"]
+    "@models/*": ["models/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "lib/cloudinary.js"],
