--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "lib": ["dom", "dom.iterable", "esnext"],
-    "baseUrl":"./",
+    "baseUrl":".",
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -19,11 +19,10 @@
       }
     ],
     "paths": {
-       "@/*": ["./*"],
-    //  "@/*": ["src/*"]
-    "@models/*": ["models/*"]
+       "@/*": ["./*"]
+         
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "lib/cloudinary.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "lib/cloudinary.js","app","models"],
   "exclude": ["node_modules"]
 }
