--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@sentry/nextjs": "^8.26.0",
     "@shadcn/ui": "^0.0.4",
+    "@stripe/stripe-js": "^4.3.0",
     "@tanstack/react-table": "^8.20.1",
     "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.4.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.417.0",
     "mongoose": "^8.5.2",
@@ -33,6 +35,7 @@
     "next-theme": "^0.1.5",
     "next-themes": "^0.3.0",
     "node-appwrite": "^13.0.0",
+    "razorpay": "^2.9.4",
     "react": "^18",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
@@ -40,6 +43,7 @@
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
     "react-phone-number-input": "^3.4.5",
+    "stripe": "^16.8.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "twilio": "^5.2.2",
